# FinOps-MCP

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  Dockerfile  FEEDBACKLOOPS.md  README.md  REPOMAP.md  cloudbuild.yaml  curl_sse.txt  docker-compose.yml  inspect_routes.py  inspect_run.py  package-lock.json  package.json  pyproject.toml  sonar-project.properties  sse_out.txt  test_mcp.mjs  test_mcp_client.py  test_sse.py
.github/workflows/: deploy.yml  monthly-refresh.yml  sonarcloud.yml
scripts/: ingest.py  ingest_focus.py  refresh_all.py
src/finops_mcp/: __init__.py  chunker.py  config.py  crawler.py  embeddings.py  server.py  tool_registry.py  vector_store.py
tests/: test_refresh.py  test_search.py
