[project]
name = "finops-mcp"
version = "0.1.0"
description = "MCP server for querying FinOps Foundation documentation via Firestore vector search and Vertex AI embeddings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Bryan Daggett"}]

dependencies = [
    "fastmcp>=2.0.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-aiplatform>=1.38.0",
    "crawl4ai>=0.4.0",
    "langchain-text-splitters>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finops_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
